--- a/addtask/template/add_task_media.css
+++ b/addtask/template/add_task_media.css
@@ -8,9 +8,14 @@
   .task-board {
     position: absolute;
     width: 100%;
-    height: calc(100dvh - 80px);
-    top: 80px;
+    height: 100dvh;
+    top: 0;
     border-radius: 0;
+    animation: none;
+  }
+
+  .task-board-headline {
+    margin-top: 80px;
   }
 
   .task-board::-webkit-scrollbar {
@@ -103,7 +108,6 @@
   .create {
     margin-right: 25px;
     font-weight: bold;
-    width: 100px;
   }
 
   .buttons {
