--- a/addtask/template/add_task_template.css
+++ b/addtask/template/add_task_template.css
@@ -519,7 +519,7 @@ textarea::-webkit-scrollbar-thumb:hover {
 }
 
 .dp-none {
-  display: none;
+  display: none !important;
 }
 
 .rotate90deg {
