--- a/board/edit-card.css
+++ b/board/edit-card.css
@@ -95,7 +95,7 @@
 }
 
 .dp-none {
-    display: none;
+    display: none !important;
 }
 
 .okButton {
