--- a/headerNav/headerNav.css
+++ b/headerNav/headerNav.css
@@ -72,7 +72,7 @@ header {
 }
 
 .dp-none {
-    display: none;
+    display: none !important;
 }
 
 .logoHeader {
