--- a/login/index.css
+++ b/login/index.css
@@ -197,7 +197,7 @@ body {
 }
 
 .dp-none {
-    display: none;
+    display: none !important;
 }
 
 .hidden {
